--- a/front/package.json
+++ b/front/package.json
@@ -9,13 +9,16 @@
     "chart.js": "^2.7.2",
     "classnames": "2.2.6",
     "history": "4.7.2",
+    "loaders.css": "^0.1.2",
     "node-sass": "4.9.3",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "^15.6.2",
     "react": "16.5.2",
+    "react-block-ui": "^1.1.3",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "16.5.2",
     "react-google-maps": "9.4.5",
+    "react-loaders": "^3.0.1",
     "react-notification-alert": "0.0.8",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.4",
